# InitialPrefabs.Msdf

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE.md  PowerShellEditorServices.json  README.md  omnisharp.json
Assets/: DefaultVolumeProfile.asset  Test.mat  UniversalRenderPipelineGlobalSettings.asset
Assets/InitialPrefabs.PluginSetup/: CopyDllsToProject.cs  InitialPrefabs.PluginSetup.asmdef
Assets/Samples/: LiberationSans.asset  UbuntuMonoNerdFontMono-Regular.asset
Assets/Samples/Materials/: Test 1.mat  Test.mat
Assets/Samples/Rendering/: Default.asset  Default_Renderer.asset
Assets/Samples/Scenes/: SampleScene.unity
Assets/Samples/Shaders/: MSDF.hlsl  MSDF.shader  MSDFDepthNormals.hlsl  MSDFDepthOnly.hlsl  MSDFInput.hlsl  MSDF_A.shadergraph  MSDF_Prototype.shadergraph  fwidth.shadersubgraph  median.shadersubgraph
Assets/Samples/Textures/: atlas.asset
Assets/Scenes/: SampleScene.unity
Assets/TextMesh Pro/: Glyph Report.txt
Assets/TextMesh Pro/Fonts/: LiberationSans SDF.asset  LiberationSans_msdfAtlas.asset
Assets/com.initialprefabs.msdfgen/: package.json
Assets/com.initialprefabs.msdfgen/InitialPrefabs.Collections/: Bitmap.cs  MultiTypedList.cs  (+4 more)
ProjectSettings/: GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
msdf-atlas/: Cargo.toml  bacon.toml  build.ps1  build.rs
msdf-atlas/src/: lib.rs
msdf-atlas/src/msdf_impl/: args.rs  byte_buffer.rs  enums.rs  font_data.rs  glyph_data.rs  glyph_package.rs  mod.rs  raw_img.rs  utils.rs  uv_space.rs
msdf-impl/: Cargo.toml
msdf-impl/src/: lib.rs
(+55 files in other folders)
