[package]
name = "msdf-atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msdf = { path = "../msdf-rs/msdf" } 
ttf-parser = "0.20"
mint = "0.5.9"
image = "0.25.1"
regex = "1.10.4"
log = "0.4.21"
simple-logging = "2.0.2"
bitflags = "2.6.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.3"

